feat: implement task delete API and enhance update/delete repository with one time I/O, and improved Swagger documentation
