# dto/task_response.go
@@ -2,17 +2,15 @@ package dto
 
 import (
 	"time"
-
-	"gorm.io/datatypes"
 )
 
 type TaskResponse struct {
-	ID        uint            `json:"id"`
-	Name      string          `json:"name"`
-	Status    int             `json:"status"`
-	DueDate   *time.Time      `json:"due_date,omitempty"`
-	Assignee  string          `json:"assignee"`
-	Tags      *datatypes.JSON `json:"tags,omitempty"`
-	CreatedAt time.Time       `json:"created_at"`
-	UpdatedAt time.Time       `json:"updated_at"`
+	ID        uint       `json:"id" example:"1"`
+	Name      string     `json:"name" example:"write a blog"`
+	Status    int        `json:"status" example:"1"`
+	DueDate   *time.Time `json:"due_date,omitempty" example:"2025-06-20T10:00:00Z"`
+	Assignee  string     `json:"assignee" example:"Barney"`
+	Tags      []string   `json:"tags,omitempty" example:"[\"doc\",\"internal\",\"urgent\"]"`
+	CreatedAt time.Time  `json:"created_at" example:"2025-06-20T10:00:00Z"`
+	UpdatedAt time.Time  `json:"updated_at" example:"2025-06-20T10:00:00Z"`
 }
